--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,14 @@
    One Web App to focus on all your projects.
 </h1>
 
-<h2>Collab With your collegues <br><mat-icon id="icon">check_circle</mat-icon> productivity <mat-icon id="icon">check_circle</mat-icon> task management</h2>
+<!-- <h2><b>Collaborate With your collegues <br> All of your work in one place: </b> <br><mat-icon id="icon">check_circle</mat-icon> Task Management  <br><mat-icon id="icon">check_circle</mat-icon> Goals <br><mat-icon id="icon">check_circle</mat-icon> Chat Support and many more..</h2> -->
 
 <div>
-   <video autoplay [muted]="true" loop src="../../assets/pm.mp4"></video>
+ <img id="gif" src="../../assets/gif1.gif" alt="GIF">
+</div>
+
+<div>
+   <video id="video1" autoplay [muted]="true" loop src="../../assets/pm.mp4"></video>
 </div>
 
 
@@ -17,7 +21,7 @@
     <label class="c-form__buttonLabel" for="checkbox">
       <button class="c-form__button" type="button">Send</button>
     </label>
-    <label class="c-form__toggle" for="checkbox" routerLink="/dashboard" data-title="Get Started"></label>
+    <label class="c-form__toggle" for="checkbox" data-title="Get Started" routerLink="/dashboard"></label>
   </form>
 </div>
 
@@ -25,8 +29,14 @@
     <h2>Premium Products? <br> Coming Soon...</h2>
 </section> -->
 
-<section id="section1">
-    <h3><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating"> Based on 1000<mat-icon id="add">add</mat-icon> reviews</span></h3>
-</section>
+<!-- <section id="section1"> -->
+    <!-- <h3><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating"> Based on 1000 <mat-icon>+</mat-icon> reviews</span></h3> -->
+<!-- </section> -->
+
+
+<footer>
+  <app-footer></app-footer>
+</footer>
+
 
 
