--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,28 +1,12 @@
 
+<div>
+    <img id="gif" src="../../assets/gif2.gif" alt="GIF@">
+</div>
 
-<mat-card>
-    <mat-card-title><h2>Collabrate With Your colleagues</h2></mat-card-title>
-    <mat-card-content>  
-        <h3>get all the updates to your pocket</h3>
-        <h3>Manage everthing in one single app</h3>
-        <h3>Share resources to anyone</h3>
-        <h3>Come OnBoard with us and get the full benefits</h3>
-        <h3>Below are some reviews from our "Satisfied Customer"...</h3>
-    
-    <div class="d-flex">
-        <div class="card">
-            <h2>Review 1</h2>
-        </div>
-        <div class="card">
-            <h2>Review 2</h2>
-        </div>
+    <h1>Get Started <br> 
+        <h3>Create Your Account Now</h3></h1>
 
-    </div>
-    </mat-card-content>
-</mat-card>
 
-<h1>Get Started <br> 
-    <h3>Create Your Account Now</h3></h1>
 <div id="register-form" [class.mat-elevation-z2]="true">
     <h2>SignUP</h2>
     <form [formGroup]="registerForm" (submit)="onRegister()">
