--- a/src/app/dialog/add-member-dialog/add-member-dialog.component.html
+++ b/src/app/dialog/add-member-dialog/add-member-dialog.component.html
@@ -1,13 +1,16 @@
-<h1 mat-dialog-title>Invite people</h1>
-<p>New members will gain access to public Projects.</p>
+
+<div id="member">
+<div mat-dialog-title><h1>Invite people</h1></div>
+<h3>New members will gain access to public Projects.</h3>
 <div mat-dialog-content>
-  <p>Invite by email</p>
+  <h2>Invite by email</h2>
   <mat-form-field appearance="outline">
-    <mat-label>Email</mat-label>
+    <mat-label>Enter the Email</mat-label>
     <input matInput [(ngModel)]="data.email">
   </mat-form-field>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data.email" cdkFocusInitial>Invite</button>
+<div mat-dialog-actions id="btns">
+  <button mat-raised-button (click)="onNoClick()" color="warn">Cancel</button>
+  <button mat-raised-button [mat-dialog-close]="data.email" cdkFocusInitial color="primary">Invite</button>
+</div>
 </div>
