--- a/src/app/dialog/project-dialog/project-dialog.component.html
+++ b/src/app/dialog/project-dialog/project-dialog.component.html
@@ -1,6 +1,6 @@
 <!-- @author : Vinay  -->
 <div id="main-container">
-  <h2 mat-dialog-title>Create New Project</h2>
+  <div mat-dialog-title><h1>Create New Project</h1></div>
 <div id="project-form">
     <form [formGroup]="projectForm">
       <div id="col-1">
@@ -39,19 +39,16 @@
           </mat-error>
       </mat-form-field>
 
-      </div>
+      </div><br>
         
-       
-
-       
+      <mat-dialog-actions id="btns">
+        <button mat-raised-button mat-dialog-close color="warn">Cancel</button>
+        <button mat-raised-button [mat-dialog-close]="true" [disabled]="projectForm.invalid" (click)="time()" color="primary">Create</button>
+      </mat-dialog-actions>
+      
+      
     </form>
 </div>
 <mat-dialog-content class="mat-typography">
   </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" (click)="time()">Create</button>
-</mat-dialog-actions>
-
-
 </div>
