--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer >
     <div>
-        <button id="ft_btn"><i class="fa-brands fa-facebook fa-2xl"></i></button>
-        <button id="ft_btn"><i class="fa-brands fa-twitter fa-2xl"></i></button>
-        <button id="ft_btn"><i class="fa-brands fa-linkedin fa-2xl"></i></button>
-        <button id="ft_btn"><i class="fa-brands fa-github fa-2xl"></i></button>
+        <a href=""><button id="ft_btn"><i class="fa-brands fa-facebook fa-2xl"></i></button></a>
+        <a href=""><button id="ft_btn"><i class="fa-brands fa-twitter fa-2xl"></i></button></a>
+        <a href=""><button id="ft_btn"><i class="fa-brands fa-linkedin fa-2xl"></i></button></a>
+        <a href=""><button id="ft_btn"><i class="fa-brands fa-github fa-2xl"></i></button></a>
     </div>
     
-    <button id="logo"><img src="../../assets/FOKUS-02.png" alt="FOKUS"></button>
+    <button id="logo"><img src="../../assets/fokus_1.png" alt="FOKUS"></button>
     <h3> &copy; 2023 FOKUS.All rights Reserved.</h3>
   </footer>
