--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&family=Tilt+Neon&family=Tilt+Warp&display=swap');
+
 @font-face {
   font-family: kanyon-light;
   src: url(../../assets/fonts/Fontspring-DEMO-kanyon-light.otf);
@@ -20,14 +23,19 @@ h1{
   margin-left: 100px;
   font-size: 60px;
   font-weight: 900px;
-  font-family: 'kanyon-heavy';
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Tilt Neon', cursive;
+  font-family: 'Tilt Warp', cursive;
   letter-spacing: 0.2rem;
   width: 30%;
   line-height: 60px;
  
 }
 
-
+footer{
+  width: 100%;
+  margin-top: 70px;
+}
 
 h2{
   margin-top: 50px;
@@ -41,7 +49,7 @@ h2{
 }
 h2>mat-icon{
   
-  padding-top: 4px;
+  padding-top: 2px;
   /* line-height: 20px; */
 }
 #add{
@@ -61,10 +69,15 @@ h3>mat-icon{
   padding-top: 4px;
 }
 
-video{
-  float: right;
-  margin-right: 10%;
-  margin-top: -15%;
+#gif{
+  width: 550px;
+  margin-left: 23px;
+}
+
+#video1{
+  position: fixed;
+  right: 10%;
+  margin-top: -30%;
   width: 700px;
   background: transparent;
   border-radius: 10px;
@@ -107,8 +120,8 @@ video{
   .c-formContainer {
     position: relative;
     font-weight: 700;
-    margin-left: 100px;
-    margin-top: 30px;
+    margin-left: 170px;
+    margin-top: 5px;
   }
   
   .c-form,
@@ -137,7 +150,18 @@ video{
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease 0s;
   }
+
+
+  .c-form__toggle:hover{
+    background-color: #fb6300;
+    box-shadow: 0px 15px 20px rgba(245, 155, 22, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
   .c-form__toggle::before {
     font-size: 1.75em;
     content: attr(data-title);
@@ -206,12 +230,13 @@ video{
     color: green;
   }
 
+
   #section1{
-    margin-top: 80px;
+    margin-top: -70px;
   }
 
   #star{
-    color: #f8c039;
+    color: #fac73f;
    font-weight: 900px;
    font-size: 40px;
    width: 40px;
@@ -219,7 +244,10 @@ video{
   }
 
   #rating{
-    color: black;
+    color: #c3c8cf;
+    font-family: 'Roboto', sans-serif;
+   font-family: 'Tilt Neon', cursive;
+   font-family: 'Tilt Warp', cursive;
   }
 
   i{
