--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,9 +25,9 @@
         
                 <button mat-mini-fab  color="warn" type="submit" [disabled]="!loginForm.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
                 <div id="register">
-                    <p>Forgot Password?</p>
+                    <h3>Forgot Password?</h3>
                 </div>
-                <button mat-mini-fab color="warn" routerLink="/home" id="btn"><mat-icon id="back">arrow_back_ios</mat-icon></button>
+                <button routerLink="/home" id="btn"><mat-icon id="back">arrow_back_ios</mat-icon></button>
     
             </form>
         
