--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -13,7 +13,7 @@ form{
     
 }
 #register-form{
-    margin-top: 50px;
+    margin-top: 20px;
     width: 550px;
     height: 550px;
     margin-left: 65%;
@@ -21,7 +21,7 @@ form{
     border-radius: 8px;
     border-radius: 20px;
     /* box-shadow: 1px 2px 4px 2px #fc8d28; */
-    background-color: white;
+    background-color: rgba(206, 110, 0, 0.3);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
@@ -36,6 +36,7 @@ form{
 button{
     width: min-content;
 }
+
 
 mat-card{
     width: 35%;
@@ -64,12 +65,12 @@ h2{
 }
 
 h1{
-    margin-top: -670px;
+    margin-top: -480px;
     margin-left: 66%;
     font-size: 60px;
     font-weight: 900px;
     font-family: 'kanyon';
-    color: white;
+    color: #2a2a2a;
 }
 
 h3{
@@ -79,8 +80,7 @@ h3{
     margin-top: 20px;
 }
 
-
-.card{
-    width: 350px;
-    height: 300px;
+#gif{
+    width: 700px;
+    margin-top: 180px;
 }
