--- a/src/app/task-board/task-board.component.css
+++ b/src/app/task-board/task-board.component.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-evenly;
     background-color: transparent;
+    overflow-y: hidden;
     
 }
 
@@ -43,4 +44,32 @@ h1:hover{
 mat-icon{
     margin-right: 10px;
     padding-top: 2px;
+}
+
+.card_container{
+    background-color: #e2e2e6;
+    border-radius: 20px;
+    height: 450px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+.card_container::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.card_container::-webkit-scrollbar{
+    width: 6px;
+	background-color: #F5F5F5;
+}
+
+.card_container::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+	background-color: #000000;
+}
+
+.text{
+    margin-top: 150px;
 }
