--- a/src/app/dialog/task-dialog/task-dialog.component.html
+++ b/src/app/dialog/task-dialog/task-dialog.component.html
@@ -1,57 +1,55 @@
-<h1 mat-dialog-title>Add a New Task</h1>
-<p>{{data?.project_id}}</p>
-<div mat-dialog-content>
-  <form #task="ngForm" (ngSubmit)="addTask(task)">
 
-    <div id="rows">
-    <div id="col-1">
-      <mat-form-field appearance="outline">
-        <mat-label>Task Name</mat-label>
-        <input matInput type="text" name="name" [(ngModel)]="formData.name" #name="ngModel" required>
+
+<div id="tasks">
+
+
+  <div mat-dialog-title><h1 >Add a New Task</h1></div>
+  <h2>Specify the members by adding their Email-ID's {{data?.project_id}}</h2>
+  <div mat-dialog-content>
+    <form #task="ngForm" (ngSubmit)="addTask(task)">
+      <div>
+        <mat-form-field appearance="outline" id="input1" color="primary">
+          <mat-label>Task Name</mat-label>
+          <input matInput type="text" name="name" [(ngModel)]="formData.name" #name="ngModel" required>
+        </mat-form-field><br>
+        <mat-form-field appearance="outline" id="input2">
+          <mat-label>Task Description</mat-label>
+          <input matInput type="text" name="description" [(ngModel)]="formData.description" #description="ngModel" required>
+        </mat-form-field>
+        
+  
+      </div>
+      <label id="example-radio-group-label">Task Priority :</label>
+        <mat-radio-group name="priority" #priority="ngModel" [(ngModel)]="formData.priority" required>
+            <mat-radio-button class="example-radio-button" *ngFor="let priority of priorities" [value]="priority" >
+              {{priority}}
+            </mat-radio-button>
+        </mat-radio-group><br>
+  
+        <mat-form-field appearance="outline" id="input4">
+          <mat-label>Members</mat-label>
+          <mat-select [(ngModel)]="formData.email" name="email">
+            <mat-option *ngFor="let email of emails" [value]="email">
+              {{email}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline" id="input3">
+          <mat-label>Select Status</mat-label>
+          <mat-select  name="status" [(ngModel)]="formData.status" #status="ngModel" required >
+          <mat-option *ngFor= "let status of statuses" [value]="status">{{status}}</mat-option>
+      </mat-select>
+  
       </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>task Description</mat-label>
-        <input matInput type="text" name="description" [(ngModel)]="formData.description" #description="ngModel" required>
-      </mat-form-field>
-    </div>
-    <label id="example-radio-group-label">Task Priority :</label>
-      <mat-radio-group name="priority" #priority="ngModel" [(ngModel)]="formData.priority" required>
-          <mat-radio-button class="example-radio-button" *ngFor="let priority of priorities" [value]="priority" >
-            {{priority}}
-          </mat-radio-button>
-      </mat-radio-group>
-      <mat-form-field appearance="outline">
-        <mat-label>Select Status</mat-label>
-        <mat-select  name="status" [(ngModel)]="formData.status" #status="ngModel" required >
-        <mat-option *ngFor= "let status of statuses" [value]="status">{{status}}</mat-option>
-    </mat-select>
-    </mat-form-field>
-
-    <!-- <label id="example-radio-group-label">Priority :</label><br> -->
-
-    <mat-radio-group name="priority" #priority="ngModel" [(ngModel)]="formData.priority" required>
-      <mat-radio-button class="example-radio-button" *ngFor="let priority of priorities" [value]="priority" >
-        {{priority}}
-      </mat-radio-button>
-  </mat-radio-group>
-
-    </div>
+  
+      <div mat-dialog-actions id="btns">
+        <button id="btn1" mat-flat-button (click)="onNoClick()" color="warn">Cancel</button>
+        <button mat-raised-button [mat-dialog-close]="formData.description" [disabled]="task.form.invalid" type="submit" color="primary" cdkFocusInitial>Ok</button>
+      </div>
+  
+    </form>
     
-      <mat-form-field appearance="outline">
-        <mat-label>task Description</mat-label>
-        <textarea matInput type="text" name="description" [(ngModel)]="formData.description" #description="ngModel" required></textarea>
-      </mat-form-field>
-
-    </div>
-   
-    <div mat-dialog-actions>
-      <button mat-button (click)="onNoClick()">No Thanks</button>
-      <!-- <button mat-button  type="submit" >Ok</button> -->
-      <button mat-button [mat-dialog-close]="formData.description" type="submit" [disabled]="task.form.invalid">Save</button>
-      
-    </div>
-        </mat-select>
-    </mat-form-field>
-    <button mat-button type="submit" [disabled]="task.form.invalid">Save</button>
-  </form>
-</div>
+  </div>
+  </div>
+  
