--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -67,11 +67,12 @@ h1, h2{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
-::ng-deep .mat-tab-list .mat-tab-labels {
-    color:blue;
-    background-color: yellow;
-}
-    ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
-        color:red;
-        background-color: green;
-        }    
+/* ::ng-deep .mat-tab-list .mat-tab-labels { */
+    /* color:blue; */
+    /* background-color: yellow; */
+/* } */
+    /* ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active { */
+        /* color:red; */
+        /* background-color: green; */
+        /* }     */
+/*  */
