--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,8 +22,8 @@
                 </mat-form-field>
         
                 <button mat-mini-fab  color="warn" type="submit" [disabled]="!loginForm.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
-                <div id="register">
-                    <h3>Forgot Password?</h3>
+                <div id="register" >
+                    <h3 routerLink="/forgetPassword">Forgot Password?</h3>
                 </div>
                 <button routerLink="/home" id="btn"><mat-icon id="back">arrow_back_ios</mat-icon></button>
     
