--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
-
 #dashboard{
     background-color: #fff;
 }
@@ -41,6 +39,9 @@ h1{
     font-family: 'Kanyon-bold' ;
     font-weight: 900px;
     font-size: 40px;
+    color: rgb(56, 56, 56);
+    padding-top: 3%;
+
 }
 button{
     margin-right: 2rem;
@@ -81,7 +82,7 @@ button{
     border-radius: 4px;
     height: 750px;
     width: 94%;
-    margin-left: -40px;
+    margin-left: 30px;
     margin-right: .5rem;
     border-radius: 10px;
     margin-top: 50px;
