--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -35,7 +35,8 @@
       <div id="main-container">
     
         <div id="top-bar">
-            <h1 (click)="sidenav.toggle()">Projects <button id="i" (click)="reload()"><mat-icon id="refresh">refresh</mat-icon></button></h1>            
+            <button mat-icon-button  (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
+            <h1>Projects <button id="i" (click)="reload()"><mat-icon id="refresh">refresh</mat-icon></button></h1>             
         </div>
 
         <div id="project-container">           
