--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -1,11 +1,6 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
-
-
-
 @font-face {
-    font-family: 'kanyonj';
-    src: url('../../assets/fonts/Fontspring-DEMO-kanyon-black.otf');
+    font-family: 'kanyon';
+    src: url('../../assets/fonts/Fontspring-DEMO-kanyon-bold.otf');
 }
 
 
@@ -35,14 +30,6 @@ mat-tab-group{
     background-color: #f6deb8;
    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
 }
-/* ::ng-deep .mat-tab-label
-{
-  height: 27px !important;
-  min-height: 5px!important;
-  margin: 3px!important;
-  width: 90px!important;
-  min-width: 5px!important;
-} */
 
 .btn{
     display: flex;
@@ -50,29 +37,45 @@ mat-tab-group{
     justify-content: space-between;
 }
 
-h1, h2{
-    font-family: "Phudu", cursive;
-    font-weight: 900px;
+h1{
+    /* font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 3rem; */
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+
 }
+ h2{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+ }
 
 #progress{
-   position: absolute;
-   right: 450px;
+   /* position: absolute;
+   right: 450px; */
+   margin-top: -5rem;
+   margin-left: 1rem;
+
 }
 
-#bar{
-    position: absolute;
-    top: 150px;
-    right: 560px;
+#value{
+    margin-left: 2.5rem;
 }
+
+
 #percentage{
     padding-top: 3px;
 }
 
-#value{
-    position: absolute;
-    right: 470px;
-    top: 150px;
+#progress-bar{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: 4rem;
+
 }
 
 #card{
