--- a/src/app/task-board/task-board.component.html
+++ b/src/app/task-board/task-board.component.html
@@ -45,7 +45,7 @@
                 <div  class="card_container" id="style1" cdkDropList [cdkDropListData]="getTasksByStatus('Completed') || []" id="Completed" (cdkDropListDropped)="drop($event, 'Completed')">
                     <div *ngIf="getTasksByStatus('Completed')?.length === 0" class="text"><h1>No task in list</h1></div>
             <div *ngFor="let task of taskList">
-                <div *ngIf="task?.status=== 'Completed'">
+                <div *ngIf="task?.status=== 'Completed'" id="non-responsive">
                     <app-task-card [task]="task" ></app-task-card> 
                 </div>                
             </div>
