--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -24,15 +24,13 @@
       <p  id='{{task.priority}}' >{{task.priority}}</p>
     </mat-card-content>
     <mat-card-actions>
-        <mat-form-field appearance="outline">
-            <mat-label>Change Status</mat-label>
+       
             <mat-select  name="status" [(ngModel)]="task.status" #status="ngModel" (selectionChange)="changeStatus(task)">
             <mat-option *ngFor= "let status of statuses" [value]="status">{{status}}</mat-option>
         </mat-select>
-        </mat-form-field>
     </mat-card-actions>
     <mat-card-footer>
-      <mat-progress-bar mode="buffer"></mat-progress-bar>
+      <mat-progress-bar mode="determinate"></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
 
