--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -43,7 +43,7 @@
             <mat-tab>
               <ng-template mat-tab-label>
                 <h1>TASK</h1>
-              </ng-template> -->
+              </ng-template>
               <mat-card class="scrollable-content">
                
                 <mat-card-content>
