--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -31,7 +31,7 @@
     <div id="nav-btns">
       <button id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'"  routerLink="/contact" [hidden]="isAdmin">Contact</button>
       <button id="btn2"  [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/pricing"> Pricing</button>
-      <button id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'">About Us</button>
+      <button id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/aboutUs">About Us</button>
       <button  id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/support" [hidden]="!isAdmin" >Support</button>
       <button id="btn2" color="primary" [ngClass]="toolbar_variable?'btn_login_change': 'btn_login'" (click)="logout()" [hidden]="!isLoggedIn">Log Out</button>
       <button id="btn2" color="primary" [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" [hidden]="isLoggedIn">Log in</button>
