--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                     My Projects
                 </mat-expansion-panel-header>
                 <mat-nav-list *ngFor="let project of projectsList$">
-                    <a mat-list-item (click)="showProjectDetails(project)">{{project?.name}}</a>
+                    <a mat-list-item (click)="showCreatedProjects(project)">{{project?.name}}</a>
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
@@ -25,7 +25,7 @@
                     Assigned Projects
                 </mat-expansion-panel-header>
                 <mat-nav-list *ngFor="let project of assignedProjects">
-                    <a mat-list-item (click)="showProjectDetails(project)">{{project?.name}}</a>
+                    <a mat-list-item (click)="showAssignedProjects(project)">{{project?.name}}</a>
                 </mat-nav-list>
             </mat-expansion-panel>
         </mat-nav-list>
