--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,18 @@
-<p>not-found works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="error-template">
+                <div>
+                    <h1>Oops!</h1>
+                <h2>404 Not Found</h2>
+                </div>
+                <div class="error-details">
+                    Sorry, an error has occured, Requested page not found!
+                </div>
+                <div class="error-actions">
+                    <button routerLink="/dashboard" class="btn btn-primary btn-lg">Take Me Home</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
