changes i signUP/in flow based on purchase

--- a/src/app/pricings/pricings.component.html
+++ b/src/app/pricings/pricings.component.html
@@ -21,7 +21,7 @@
                         <!-- <li><i class="fa fa-hdd"></i> 50GB Bandwidth</li> -->
                     </ul>
                     <div class="pricingTable-signup">
-                        <button mat-raised-button id="btn" *ngIf="!name" routerLink="/login">Sign Up</button>
+                        <button mat-raised-button id="btn" *ngIf="!name" (click)="toSignUp()">Sign Up</button>
                         <button mat-raised-button *ngIf="name" disabled>FREE</button>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                         <li class="disable"><i class="fa fa-share-alt"></i> Chat Support</li>
                     </ul>
                     <div class="pricingTable-signup">
-                        <button mat-raised-button id="btn" *ngIf="!name" routerLink="/login">Sign Up</button>
+                        <button mat-raised-button id="btn" *ngIf="!name" (click)="toSignUp()">Sign Up</button>
                         <button mat-raised-button id="btn" *ngIf="name" (click)="pay()">Pay Now</button>
                     </div>
                 </div>
